[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Enemies/enemySpikey_3.png" type="Texture" id=1]
[ext_resource path="res://enemies/EnemyStationary.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.8386
height = 76.8284

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 95 ), Vector2( 0, 10 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 95 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 372.377

[node name="EnemyStationary" type="Node2D"]
script = ExtResource( 2 )

[node name="Body" type="Area2D" parent="."]
position = Vector2( 0, 95 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, -60 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
autoplay = "start"
anims/move = SubResource( 2 )
anims/start = SubResource( 3 )

[node name="Detect" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( 0, -165.497 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_Detect_body_exited"]
